# epoca

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dev-adhoc.entitlements  dev-info.plist  dev.entitlements  run-debug.sh  run-release.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
android/: build.sh  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
crates/epoca/: Cargo.toml  build.rs
crates/epoca-android/: Cargo.toml
crates/epoca-android/src/: glyph.wgsl  input.rs  layout.rs  lib.rs  main.rs  rect.wgsl  renderer.rs  text.rs  theme.rs
crates/epoca-broker/: Cargo.toml
crates/epoca-broker/src/: lib.rs
crates/epoca-chain/: Cargo.toml
crates/epoca-chain/examples/: dotns_debug.rs
crates/epoca-chain/src/: btc.rs  client.rs  dotns.rs  eth.rs  lib.rs  rpc_bridge.rs  statement_store.rs
crates/epoca-core/: Cargo.toml
crates/epoca-core/src/: app_library.rs  app_storage.rs  bookmarks.rs  chain.rs  chain_api.rs  data_api.rs  declarative.rs  extrinsic.rs  history.rs  host.rs  js_bridge.rs  lib.rs  media_api.rs  reader.rs  session.rs  settings.rs  shield.rs  spa.rs  statements_api.rs  tabs.rs  test_server.rs  view_bridge.rs  wallet.rs  webauthn.rs  workbench.rs
crates/epoca-dsl/: Cargo.toml
crates/epoca-dsl/src/: ast.rs  eval.rs  lib.rs  parser.rs  state.rs
crates/epoca-guest-ui/: Cargo.toml
crates/epoca-guest-ui/src/: lib.rs
crates/epoca-hostapi/: Cargo.toml  README.md
crates/epoca-hostapi/src/: codec.rs  lib.rs  protocol.rs
crates/epoca-protocol/: Cargo.toml
crates/epoca-protocol/src/: lib.rs
crates/epoca-sandbox/: Cargo.toml
crates/epoca-sandbox/src/: bundle.rs  car.rs  lib.rs  runtime.rs
crates/epoca-shield/: Cargo.toml
crates/epoca-shield/src/: lib.rs
crates/epoca-shield/src/compiler/: content_rules.rs  cosmetic.rs  mod.rs
crates/epoca-shield/src/fingerprint/: mod.rs
crates/epoca-shield/src/lists/: fetcher.rs  mod.rs  parser.rs
crates/epoca-shield/src/runtime/: mod.rs  scripts.rs
crates/epoca-shield/tests/: bulk_filter_smoke.rs
crates/epoca-shield/tests/fixtures/: sample_easylist.txt
crates/epoca-wallet/: Cargo.toml
crates/epoca-wallet/src/: derive.rs  keystore.rs  lib.rs  pairing.rs
crates/epoca/src/: http.rs  main.rs
crates/gpui-ui-kit/: Cargo.toml  LICENSE
crates/gpui-ui-kit-macros/: Cargo.toml
crates/gpui-ui-kit-macros/src/: lib.rs
crates/gpui-ui-kit/src/: accordion.rs  alert.rs  animation.rs  avatar.rs  badge.rs  breadcrumbs.rs  button.rs  button_set.rs  card.rs  checkbox.rs  color.rs  color_tokens.rs  command_palette.rs  confirm_dialog.rs  context_menu.rs  dialog.rs  drag_list.rs  empty_state.rs  focus.rs  i18n.rs  icon_button.rs  image_view.rs  input.rs  keyboard_shortcut_label.rs  lib.rs  loading_overlay.rs  menu.rs  notification.rs  number_input.rs  pane_divider.rs  popover.rs  progress.rs  qr.rs  scale.rs  search_bar.rs  select.rs  settings_form.rs  sidebar.rs  size.rs  slider.rs  (+15 more)
crates/gpui-ui-kit/src/audio/: interactions.rs  mod.rs  potentiometer.rs  vertical_slider.rs  volume_knob.rs
crates/gpui-ui-kit/src/color_picker/: mod.rs
crates/gpui-ui-kit/src/wizard/: mod.rs
crates/gpui-ui-kit/src/workflow/: bezier.rs  canvas.rs  history.rs  hit_test.rs  mod.rs  node.rs  port.rs  state.rs  tests.rs  theme.rs
docs/: backlog.md  design.md
examples/: app.manifest.toml  converter.zml  counter.manifest.toml  counter.polkavm  counter.zml  data-test.prod  p2p-test.prod  quiz.zml  sample_app.toml  test-spa.prod  tip_splitter.zml
examples/data-test/: manifest.toml
examples/data-test/assets/: index.html
examples/p2p-test/: manifest.toml
examples/p2p-test/assets/: index.html
examples/test-spa/: manifest.toml
examples/test-spa/assets/: index.html
guest/counter/: Cargo.toml
guest/counter/src/: main.rs
guest/doom/: Cargo.toml  build.rs
guest/doom/bundle/: doom.prod  manifest.toml
guest/doom/c_src/: d_main.c  doomgeneric_polkavm.c  fileio_shim.c  g_game.c  i_sound_stub.c  libc_shim.c  m_argv.c  m_misc.c  p_saveg.c  w_wad.c
guest/doom/c_src/include/: assert.h  ctype.h  errno.h  fcntl.h  inttypes.h  limits.h  math.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  time.h  unistd.h
guest/doom/c_src/include/sys/: stat.h  types.h
guest/doom/src/: main.rs
guest/framebuffer-test/: Cargo.toml  framebuffer-test.prod
guest/framebuffer-test/bundle/: manifest.toml
guest/framebuffer-test/src/: main.rs
guest/moonpool/: Cargo.toml  moonpool.prod
guest/moonpool/bundle/: manifest.toml
guest/moonpool/src/: main.rs
homebrew/: epoca.rb
resources/: Epoca.icns
scripts/: package-macos.sh  release.sh  sign-and-run.sh
tools/: move_mouse.swift  test_cursor.sh
tools/prod-pack/: Cargo.toml
tools/prod-pack/src/: main.rs
types/: epoca-host-api.d.ts
