[workspace]
resolver = "2"
members = [
    "crates/epoca",
    "crates/epoca-core",
    "crates/epoca-sandbox",
    "crates/epoca-protocol",
    "crates/epoca-broker",
    "crates/epoca-dsl",
    "crates/epoca-android",
    "crates/epoca-guest-ui",
    "crates/epoca-shield",
]
exclude = [
    "guest/counter",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
gpui = "0.2.2"
gpui-component = { version = "0.5.1", features = ["webview"] }
gpui-component-assets = "0.5.1"
polkavm = "0.31.0"
polkavm-linker = "0.31.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
toml = "0.8"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
indexmap = "2"
objc2 = "0.5"
wgpu = "23"
winit = "0.30"
cosmic-text = "0.12"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
sentry = "0.45"
