[workspace]
resolver = "2"
members = [
    "crates/epoca",
    "crates/epoca-core",
    "crates/epoca-sandbox",
    "crates/epoca-protocol",
    "crates/epoca-broker",
    "crates/epoca-dsl",
    "crates/epoca-android",
    "crates/epoca-guest-ui",
    "crates/epoca-shield",
    "crates/epoca-chain",
    "crates/epoca-wallet",
    "crates/epoca-hostapi",
    "tools/prod-pack",
]
exclude = []

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-only"

[workspace.dependencies]
gpui = "0.2.2"
gpui-component = { version = "0.5.1", features = ["webview"] }
gpui-component-assets = "0.5.1"
polkavm = { version = "0.31.0", features = ["generic-sandbox"] }
polkavm-linker = "0.31.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
toml = "0.8"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
indexmap = "2"
objc2 = "0.5"
block2 = "0.5"
wgpu = "23"
winit = "0.30"
cosmic-text = "0.12"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
sentry = "0.45"
tungstenite = { version = "0.24", features = ["native-tls"] }
smoldot-light = { version = "0.19", default-features = false, features = ["std"] }
smol = "2"
zip = "2"
zstd = "0.13"
image = "0.25"
smallvec = { version = "1", features = ["union"] }
rusqlite = { version = "0.33", features = ["bundled"] }

[patch.crates-io]
polkavm = { git = "https://github.com/replghost/polkavm.git", rev = "3638e6f" }
polkavm-derive = { git = "https://github.com/replghost/polkavm.git", rev = "3638e6f" }
polkavm-common = { git = "https://github.com/replghost/polkavm.git", rev = "3638e6f" }
polkavm-assembler = { git = "https://github.com/replghost/polkavm.git", rev = "3638e6f" }
