[package]
name = "epoca-chain"
version = "0.0.1"
edition = "2021"

[dependencies]
tungstenite = { version = "0.24", features = ["native-tls"] }
smoldot-light = { workspace = true }
smol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

# Bitcoin Kyoto light client (BIP-157/158 compact block filters)
bip157 = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

# Ethereum Helios light client (consensus + execution verification)
helios-ethereum = { git = "https://github.com/a16z/helios", rev = "204c998a" }
