[package]
name = "epoca-core"
version.workspace = true
edition.workspace = true

[dependencies]
epoca-chain = { path = "../epoca-chain" }
epoca-protocol = { path = "../epoca-protocol" }
epoca-sandbox = { path = "../epoca-sandbox" }
epoca-broker = { path = "../epoca-broker" }
epoca-dsl = { path = "../epoca-dsl" }
epoca-shield = { path = "../epoca-shield" }
gpui = { workspace = true }
gpui-component = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[features]
test-server = []

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-foundation = { version = "0.2", features = ["NSGeometry"] }
