[package]
name = "epoca-protocol"
version.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["serde/std", "postcard/use-std"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
