[package]
name = "epoca-sandbox"
version.workspace = true
edition.workspace = true

[dependencies]
epoca-protocol = { path = "../epoca-protocol" }
polkavm = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
postcard = { version = "1", features = ["alloc"] }
zip = { workspace = true }
sha2 = "0.10"
ed25519-zebra = "4"
hex = "0.4"

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
