[package]
name = "epoca-shield"
version = "0.1.0"
edition = "2021"

[dependencies]
# No GPUI dependency — this crate is pure Rust
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
blake3 = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
regex = "1"
