[package]
name = "epoca-wallet"
version = "0.0.1"
edition = "2021"

[dependencies]
schnorrkel = "0.11"
bip39 = { version = "2", features = ["rand", "zeroize"] }
blake2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }
bs58 = "0.5"
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

# secp256k1 / BIP-44 (ETH + BTC key derivation)
k256 = { version = "0.13", features = ["ecdsa"] }
bip32 = { version = "0.5", default-features = false, features = ["secp256k1", "alloc"] }
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"
bech32 = "0.11"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3", features = ["OSX_10_15"] }
security-framework-sys = "2"
core-foundation = "0.10"
objc2 = { workspace = true }
